--- a/content/spectacle/3-resources-to-learn-to-draw-for-free/post.mdx
+++ b/content/spectacle/3-resources-to-learn-to-draw-for-free/post.mdx
@@ -1,14 +1,10 @@
 ---
-title: Programme
-image: ./images/bird-drawing.jpg # place in images folder, in same directory
+title: Spectacle
+image: ./images/programme.jpg # place in images folder, in same directory
 imageAttribution: https://www.vecteezy.com/free-vector/drawing # if attribution needed, put link to source
 date: 2023-09-23 # Date written, OR date edited
-category: Programme
+category: Spectacle
 trending: true #leave trending, topPick, and popular as false. The maintainers typically decide this :)
 topPick: false
 popular: false
 ---
-
-## Programmation
-
-IMPORTANT: If you don't see any styling here, we haven't decided on blockquote styling yet :)
