remove categorie bar

--- a/content/spectacle/3-resources-to-learn-to-draw-for-free/post.mdx
+++ b/content/spectacle/3-resources-to-learn-to-draw-for-free/post.mdx
@@ -1,7 +1,7 @@
 ---
 title: Spectacle
 image: ./images/programme.jpg # place in images folder, in same directory
-imageAttribution: https://www.vecteezy.com/free-vector/drawing # if attribution needed, put link to source
+###imageAttribution: https://www.vecteezy.com/free-vector/drawing # if attribution needed, put link to source
 date: 2023-09-23 # Date written, OR date edited
 category: Spectacle
 trending: true #leave trending, topPick, and popular as false. The maintainers typically decide this :)
